k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mana-archive
spec:
  selector:
    app: mana-archive
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
